--- a/src/app/dialog/show-members-of-channel/show-members-of-channel.component.scss
+++ b/src/app/dialog/show-members-of-channel/show-members-of-channel.component.scss
@@ -7,6 +7,9 @@
    gap: 16px; 
    flex-direction: column;
    border-top-right-radius: 0px !important;
+   @include respond-to-maxWidth(small){
+    @include padding(32px, 20px, 32px, 20px);
+   }
 }
 
 .closeButton {
@@ -50,10 +53,16 @@
         text-overflow: ellipsis;
         overflow: hidden;
         max-width: 180px;
+        @include respond-to-maxWidth(small){
+            max-width: 148px;
+        }
     }
     &:hover {
         background-color: #ECEEFE;
         cursor: pointer;
+    }
+    @include respond-to-maxWidth(small){
+        @include padding (4px, 8px, 4px, 8px);
     }
 }
 
@@ -135,6 +144,28 @@ h2{
     flex-direction: column;
     max-height: 320px !important;
     overflow: auto;
+    max-width: 260px;
+    &::-webkit-scrollbar {
+        width: 8px; /* Breite des Scrollbalkens */
+        height: 8px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: transparent; /* Transparenter Track */
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--purple-2); /* Farbe des Thumbs */
+        border-radius: 30px; /* Rundungen für den Thumb */
+        transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: var(--purple-1); /* Hover-Farbe des Thumbs */
+        cursor: grab;
+    }
+    @include respond-to-maxWidth(small){
+        @include padding(8px, 8px, 8px, 8px);
+        left: 8px;
+        width: 280px;
+    }
 }
 
 .closeButton {
