--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -15,14 +15,14 @@
             </div>
             }
             @else {
-            <div class="showMemberListButtonContainer" (click)="showMembersOfChannel()">
+            <div class="showMemberListButtonContainer" (click)="handleClickToShowOrAddMembers()">
                 <div class="active-members-image-container" *ngFor="let member of this.memberService.allChannelMembers">
                     <img style="margin-left: -10px;" src="{{member.imageUrl}}" alt="">
                 </div>
                 <p>{{auth.currentChannelData?.membersId?.length}}</p>
             </div>
             <button>
-                <mat-icon (click)="addMembersToChannel()" class="add-members">person_add</mat-icon>
+                <mat-icon (click)="handleClickToShowOrAddMembers()" class="add-members">person_add</mat-icon>
             </button>
             }
         </div>
