--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -27,16 +27,23 @@
     color: var(--text-black);
     display: flex;
     flex-direction: column;
-    @include respond-to-maxWidth('XXL') {
+    @include respond-to-maxWidth('XL') {
         max-height: 100%;
         position: absolute;
-        top: 0;
+        top: 94px;
         left: 0;
         bottom: 20px;
         z-index: 2;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;        border-radius: 30px;
         border-top-left-radius: 0px;
         border-bottom-left-radius: 0px;
+    }
+    @include respond-to-maxWidth(large) {
+        bottom: 0px;
+    }
+    @include respond-to-maxWidth(medium) {
+        bottom: 20px;
+        padding-left: 56px;
     }
     @include respond-to-minWidth(small) {
         z-index: 5;
@@ -52,6 +59,7 @@
         bottom: 0;
         z-index: 3;
         border-radius: 0px;
+        box-shadow: rgba(255, 255, 255, 0) 0px 0px 0px !important;        
     }
 }
 
@@ -59,7 +67,7 @@
     position: fixed;
     transform: translateY(-30%);
     left: 0px;
-    bottom: 5vh;
+    bottom: 11vh;
     z-index: 5;
     transform: rotate(90deg) scaleX(-1) scaleY(-1);
     transform-origin: left top;
@@ -99,6 +107,10 @@
                 stroke: var(--purple-2);
             }
         }
+    }
+    @include respond-to-maxWidth('smallMedium'){
+        padding: 8px 26px 8px 26px;
+        bottom: 13vh;
     }
     @include respond-to-maxWidth(small){
         display: none;
@@ -432,6 +444,9 @@ h3 {
 .dropDownChannelSection {
     overflow-y: auto; /* Aktiviert nur vertikales Scrollen */
     max-height: 30%;
+    @include respond-to-minWidth(small){
+        padding-left: 24px;
+    }
   }
 
 
