--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -5,12 +5,14 @@ app-main-header {
     @include dFlex(space-between, center);
     height: 120px;
     width: 100%;
-
     @include respond-to-maxWidth(large) {
         z-index: 99;
         width: 100%;
         height: 80px;
         background-color: var(--primary-bg);
+    }
+    @include respond-to-maxWidth(small) {
+        @include padding(20px, 16px, 20px, 16px);
     }
 }
 
@@ -27,14 +29,13 @@ app-main-header {
 .main-content {
     @include dFlex($ai: center, $jc: space-between);
     @include heightWidth($h: calc(100vh - 120px));
-
-    @include respond-to-maxWidth(large) {
-        @include heightWidth($h: calc(100vh - 80px));
-    }
-
     gap: 20px;
     @include padding(0px, 20px, 20px, 20px);
     position: relative;
+    @include respond-to-maxWidth(large) {
+        @include heightWidth($h: calc(100vh - 80px));
+        gap: 0px;
+    }
     @include respond-to-maxWidth(medium){
         @include padding(0px, 0px, 0px, 0px);
         border-radius: 0px;
@@ -59,14 +60,23 @@ app-devspace {
     flex-direction: column;
     flex: auto;
 
-    @include respond-to-maxWidth('XXL') {
+
+    @include respond-to-maxWidth('XL') {
         max-width: 302px;
         position: absolute;
         top: 0;
         left: 0;
         bottom: 20px;
         z-index: 2;
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;        border-radius: 30px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;        
+        border-radius: 30px;
+    }
+    @include respond-to-maxWidth(large) {
+        bottom: 0px;
+        left: -20px;
+    }
+    @include respond-to-maxWidth(medium) {
+        bottom: 20px;
     }
     @include respond-to-minWidth(small) {
         z-index: 5;
@@ -80,6 +90,8 @@ app-devspace {
         right: 0;
         bottom: 0;
         z-index: 3;
+        box-shadow: rgba(255, 255, 255, 0) 0px 0px 0px !important;        
+
     }
 }
 
@@ -113,7 +125,6 @@ app-thread {
 }
 
 
-
 .focus-app-thread{
     @include respond-to-maxWidth('XL') {
         position: relative;
@@ -135,11 +146,11 @@ app-thread {
 
 .focus-app-devSpace{
     @include respond-to-maxWidth(large) {
-        width: 100%;
+        // width: 100%;
         max-width: 100%;
         position: relative;
     }
-    @include respond-to-maxWidth('smallMedium') {
+    @include respond-to-maxWidth(small) {
         width: 100%;
         max-width: 100%;
         position: absolute;
