--- a/src/app/main-content/message/message.component.html
+++ b/src/app/main-content/message/message.component.html
@@ -1,5 +1,5 @@
-<div class="new-message-container" [ngClass]="thread ? 'border-none' : 'border-top'">
-    <div class="hover" (mousemove)="isMessageHover = true" (mouseleave)="resetHoverAndMenu()"
+<div class="new-message-container" [ngClass]="thread ? 'border-none' : 'border-top'" >
+    <div class="hover" (mouseleave)="resetHoverAndMenu()"
     [ngClass]="{
         'row-reverse': messageService.checkUser(message),
         'align-start': !messageService.checkUser(message)
