--- a/src/app/main-content/message/message.component.scss
+++ b/src/app/main-content/message/message.component.scss
@@ -54,15 +54,23 @@
     width: 100%;
     box-sizing: border-box;
     padding: 5px 30px;
-
+    padding-left: 72px;
     &:hover {
         background-color: var(--primary-bg);
     }
-
     @media(max-width: 660px) {
         padding: 5px 15px;
         flex-direction: column;
         align-items: end;
+    }
+    @include respond-to-maxWidth('smallMedium'){
+        padding-left: 64px;
+    }
+    @include respond-to-minWidth('smallMedium'){
+        padding-left: 72px;
+    }
+    @include respond-to-maxWidth(small){
+        padding-left: 30px;
     }
 }
 
@@ -79,3 +87,7 @@
       align-items: start;
     }
 }
+
+// .chatDistanceToDevSpaceToggleButtonOnTablet{
+//     padding-left: 72px !important;
+// }
