michael kraemer profile picture upload for legal-notice

--- a/src/app/imprint/legal-notice/legal-notice.component.html
+++ b/src/app/imprint/legal-notice/legal-notice.component.html
@@ -15,7 +15,7 @@
 
 
     <div class="info-card reverse">
-        <div class="profil-pic"><img src="./img/profile-pic/arndt-profil.webp"></div>
+        <div class="profil-pic"><img src="./img/profile-pic/michael-kraemer-profile-picture.jpg"></div>
         <div class="profil-content">
         <p><strong>Michael Krämer</strong><br> 
         Emdener Str. 11<br> 
