--- a/src/app/dialog/add-members-channel/add-members-channel.component.scss
+++ b/src/app/dialog/add-members-channel/add-members-channel.component.scss
@@ -1,9 +1,5 @@
 @import '../../../mixin.scss';
 
-mat-icon{
-    @include materialSymbols()
-}
-
 .mat-mdc-dialog-surface,
 mat-dialog-container,
 .mdc-dialog--open .mat-mdc-dialog-surface,
@@ -16,8 +12,8 @@ mat-dialog-container,
 }
 
 .mdc-dialog--open .mat-mdc-dialog-surface {
-    width: 600px !important;
     height: auto !important;
+    width: 460px !important;
     position: absolute !important;
     border-top-right-radius: 0px !important;
     flex-direction: unset !important;
@@ -25,6 +21,10 @@ mat-dialog-container,
     @include respond-to-maxWidth(small){
         width: 294px !important;
     }
+}
+
+.mat-mdc-dialog-surface mdc-dialog__surface{
+    width: unset !important;
 }
 
 .mdc-text-field--filled:not .mdc-text-field--disabled{
@@ -37,10 +37,10 @@ mat-dialog-container,
    gap: 16px; 
    flex-direction: column;
    border-top-right-radius: 0px !important;
+    width: 100%;
    @include respond-to-maxWidth(small){
-    width: 294px !important;
-    @include padding(32px, 20px, 32px, 20px);
-
+        width: 294px !important;   
+        @include padding(32px, 20px, 32px, 20px);
     }
 }
 
@@ -123,6 +123,10 @@ h2{
     @include nunito(400, 18px, black);
 }
 
+.mat-mdc-text-field-wrapper{
+    scrollbar-width: none !important;
+}
+
 ::ng-deep .mat-mdc-form-field-subscript-wrapper{
     display: none;
 }
@@ -133,7 +137,6 @@ h2{
 
 .mat-mdc-text-field-wrapper {
     overflow: auto !important;
-    scrollbar-width: thin;
 }
 
 .mat-mdc-standard-chip.mdc-evolution-chip--with-trailing-action .mdc-evolution-chip__action--primary {
@@ -146,4 +149,24 @@ h2{
     padding-left: 0px!important;
     padding-right: 12px;
     background-color: transparent !important;
+}
+
+.cdk-overlay-pane:not(.mat-mdc-autocomplete-panel-above) div.mat-mdc-autocomplete-panel {
+    /* Custom scrollbar styling */
+    &::-webkit-scrollbar {
+        width: 8px; /* Breite des Scrollbalkens */
+        height: 8px;
+    }
+    &::-webkit-scrollbar-track {
+        background-color: transparent; /* Transparenter Track */
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--purple-2); /* Farbe des Thumbs */
+        border-radius: 30px; /* Rundungen für den Thumb */
+        transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: var(--purple-1); /* Hover-Farbe des Thumbs */
+        cursor: grab;
+    }
 }
