--- a/src/app/main-content/chat/chat-header/chat-header.component.html
+++ b/src/app/main-content/chat/chat-header/chat-header.component.html
@@ -15,7 +15,7 @@
             </div>
             }
             @else {
-            <div class="showMemberListButtonContainer" (click)="handleClickToShowOrAddMembers()">
+            <div class="showMemberListButtonContainer" (click)="showMembersOfChannel()">
                 <div class="active-members-image-container" *ngFor="let member of this.memberService.allChannelMembers">
                     <img style="margin-left: -10px;" src="{{member.imageUrl}}" alt="">
                 </div>
