--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -30,7 +30,7 @@
     @include respond-to-maxWidth('XL') {
         max-height: 100%;
         position: absolute;
-        top: 94px;
+        top: 72px;
         left: 0;
         bottom: 20px;
         z-index: 2;
@@ -238,6 +238,7 @@ h3 {
 .folderTitle {
     margin-left: 10px;
     font-weight: 500;
+    white-space: nowrap;
 }
 
 .dFlex {
