--- a/src/app/shared/header/searchbar/searchbar.component.html
+++ b/src/app/shared/header/searchbar/searchbar.component.html
@@ -31,7 +31,7 @@
               <img class="contactPicture" [src]="member.imageUrl" alt="User picture" *ngIf="member.imageUrl">
               <img class="onlineStatus" [src]="member.status ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="User picture" *ngIf="member.status !== undefined">
             </div>
-            <span>{{ member.name }}</span>
+            <span>{{ member.name }} @if(member.id === (this.currentMember$ |  async )?.id) {(You)}</span>
           </div>
         </div>
       </div>
