enable toggle devspace in the header-logo, show-members-dialogs of channels can open member profiles, threads will be closed when a new channel has been created, public channel sign in chat header has no hover effect anymore (because no functionality)

--- a/src/app/dialog/show-members-of-channel/show-members-of-channel.component.html
+++ b/src/app/dialog/show-members-of-channel/show-members-of-channel.component.html
@@ -11,7 +11,7 @@
                  [formControl]="myControl"
           >
           <div class="memberListContainer">
-            <div class="contact"  *ngFor="let member of (filteredMembers$ | async)">
+            <div class="contact" (click)="this.dialogRef.close(); memberService.openProfileUser(member.id)" *ngFor="let member of (filteredMembers$ | async)">
               <div class="contactPictureContainer">
                 <img class="contactPicture" [src]="member.imageUrl" alt="User picture">
                 <img class="onlineStatus" [src]="member.status ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="User status">
