--- a/src/app/dialog/show-members-of-channel/show-members-of-channel.component.scss
+++ b/src/app/dialog/show-members-of-channel/show-members-of-channel.component.scss
@@ -145,22 +145,7 @@ h2{
     max-height: 320px !important;
     overflow: auto;
     max-width: 260px;
-    &::-webkit-scrollbar {
-        width: 8px; /* Breite des Scrollbalkens */
-        height: 8px;
-    }
-    &::-webkit-scrollbar-track {
-        background-color: transparent; /* Transparenter Track */
-    }
-    &::-webkit-scrollbar-thumb {
-        background-color: var(--purple-2); /* Farbe des Thumbs */
-        border-radius: 30px; /* Rundungen für den Thumb */
-        transition: background-color 0.125s ease; /* Sanfter Übergang beim Hover */
-    }
-    &::-webkit-scrollbar-thumb:hover {
-        background-color: var(--purple-1); /* Hover-Farbe des Thumbs */
-        cursor: grab;
-    }
+    scrollbar-width: none;
     @include respond-to-maxWidth(small){
         @include padding(8px, 8px, 8px, 8px);
         left: 8px;
