responsive edit-channel dialog; fixed responsive create channel dialog for devices to 600px

--- a/src/app/dialog/create-channel/create-channel.component.scss
+++ b/src/app/dialog/create-channel/create-channel.component.scss
@@ -98,7 +98,7 @@ button{
     &:hover {
         background-color: var(--dg-btn-bg);
     }
-    @include respond-to-maxWidth(small){
+    @include respond-to-maxWidth('smallMedium'){
         right: 16px;
     }
 }
@@ -109,7 +109,7 @@ button{
 
 
 ::ng-deep .mat-mdc-dialog-surface{
-    @include respond-to-maxWidth(small){
+    @include respond-to-maxWidth('smallMedium'){
         border-radius: 0 !important;  /* Entfernt die abgerundeten Ecken */
     };
 }
