--- a/src/app/dialog/add-members-channel/add-members-channel.component.scss
+++ b/src/app/dialog/add-members-channel/add-members-channel.component.scss
@@ -41,6 +41,7 @@ mat-dialog-container,
    @include respond-to-maxWidth(small){
         width: 294px !important;   
         @include padding(32px, 20px, 32px, 20px);
+        gap: 0px; 
     }
 }
 
@@ -87,7 +88,10 @@ h2{
 
 .addButtonContainer{
     width: 100%;
-    @include dFlex(end, center)
+    @include dFlex(end, center);
+    @include respond-to-maxWidth(small){
+        margin-top: 16px;
+    }
 }
 
 .mat-mdc-unelevated-button .mdc-button__label{
