--- a/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.html
+++ b/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.html
@@ -1,5 +1,5 @@
     <form class="dialogWindow" #channelForm="ngForm">
-        <div>
+        <div class="width-100">
             <mat-icon (click)="dialogRef.close()" class="closeIcon">close</mat-icon>
             <h3>Adding People</h3>
 
