--- a/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.scss
+++ b/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.scss
@@ -11,14 +11,12 @@ mat-icon{
     gap: 20px;
     @include padding(40px, 40px, 40px, 40px);
     width: 560px;
-    @include respond-to-maxWidth(small){
+    @include respond-to-maxWidth('smallMedium'){
         @include padding(32px, 16px, 32px, 16px);
         width: 100%;
         height: 100%;
         @include dFlex(space-between, start);
-
     }
-    
 }
 
 .optionContainer{
@@ -30,7 +28,7 @@ mat-icon{
 
 h3{
     @include nunito(700, 24px, black);
-    @include respond-to-maxWidth(small){
+    @include respond-to-maxWidth('smallMedium'){
         margin-bottom: 20px;
         margin-top: 20px;
     }
@@ -47,7 +45,7 @@ h3{
     &:hover {
         background-color: var(--dg-btn-bg);
     }
-    @include respond-to-maxWidth(small){
+    @include respond-to-maxWidth('smallMedium'){
         right: 16px;
     }
 }
@@ -80,7 +78,7 @@ mat-form-field {
     max-height: calc(24px * 3 + 36px);
     @include nunito(400, 18px, black);
     width: 100%;
-    @include respond-to-maxWidth(small){
+    @include respond-to-maxWidth('smallMedium'){
         margin-top: 20px;
         width: 100%;
         max-height: 240px;
@@ -262,7 +260,7 @@ form {
 
 
 ::ng-deep .mat-mdc-dialog-surface{
-    @include respond-to-maxWidth(small){
+    @include respond-to-maxWidth('smallMedium'){
         border-radius: 0 !important;  /* Entfernt die abgerundeten Ecken */
     };
 }
@@ -275,7 +273,11 @@ form {
 }
 
 input {
-    @include respond-to-maxWidth(small){
+    @include respond-to-maxWidth('smallMedium'){
         margin-top: 20px;
     }
+}
+
+.width-100 {
+    width: 100%;
 }
