--- a/src/app/dialog/edit-channel/edit-channel.component.html
+++ b/src/app/dialog/edit-channel/edit-channel.component.html
@@ -1,3 +1,7 @@
+<div class="mobileTitleContainer">
+  <h2><mat-icon class="tagIcon">tag</mat-icon>{{previousChannel.title}}</h2>
+  <mat-icon (click)="dialogRef.close()" class="closeIcon">close</mat-icon>
+</div>
 <div class="dialog">
   <div class="titleContainer">
     <h2><mat-icon class="tagIcon">tag</mat-icon>{{previousChannel.title}}</h2>
@@ -39,8 +43,11 @@
         {{this.channelCreator}}
       }
     </p>
-  </div>
+  </div>   
+  @if (isWindowLowerThan600()){
+    <app-show-members-of-channel></app-show-members-of-channel>
+  }
   <div class="buttonContainer">
     <button class="bottomButton" mat-flat-button [disabled]="previousChannel.id === 'uZaX2y9zpsBqyaOddLWh'" (click)="leaveChannel()">Leave channel</button>
-  </div>
+  </div> 
 </div>
