--- a/src/app/dialog/edit-channel/edit-channel.component.scss
+++ b/src/app/dialog/edit-channel/edit-channel.component.scss
@@ -13,17 +13,32 @@ mat-icon{
     text-align: start;
     min-width: 500px;
     min-height: 670px;
+    @include respond-to-maxWidth('smallMedium'){
+        @include padding(20px, 12px, 20px, 12px);
+        min-width: unset;
+        min-height: unset;
+        width: 100%;
+        overflow: auto;
+        scrollbar-width: none;    
+    }
 }
 
 .titleContainer{
     @include dFlex(space-between, center);
     width: 100%;
+    @include respond-to-maxWidth('smallMedium'){
+    display: none;
+    }
 }
 
 .box {
     border-radius: 30px;
     @include padding(24px, 24px, 24px, 24px);
-    border: 1px solid var(--border-light-purple);
+    border: 1px solid #A4A8FF;
+    @include respond-to-maxWidth('smallMedium'){
+        @include padding(12px, 20px, 20px, 20px);
+        border-radius: 20px;
+    }
 }
 
 h2{
@@ -36,6 +51,16 @@ h2{
 
 .tagIcon{
     margin-right: 16px;
+}
+
+.closeIcon{
+    @include padding(4px, 6px, 4px, 6px);
+    transition: background-color 0.125s ease-in-out;
+    border-radius: 50px;
+    &:hover{
+        background-color: #A4A8FF;
+        cursor: pointer;
+    }
 }
 
 .width100{
@@ -82,6 +107,10 @@ p {
     background-color: #444DF2 !important;
     padding: 24px 32px !important;
     box-sizing: border-box;
+    @include respond-to-maxWidth('smallMedium'){
+        margin-top: 8px;
+        margin-bottom: 16px;
+    }
 }
 
 button[disabled]{
@@ -157,4 +186,49 @@ input {
         background-color: var(--purple-2); /* Hover-Farbe des Thumbs */
         cursor: grab;
     }
+}
+
+::ng-deep .mat-mdc-dialog-surface, ::ng-deep .mdc-dialog--open .mat-mdc-dialog-surface{
+    @include respond-to-maxWidth('smallMedium'){
+        border-radius: 0px !important;
+    }
+}
+
+.mobileTitleContainer{
+    display: none;
+    @include respond-to-maxWidth('smallMedium'){
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+        @include dFlex(space-between, center);
+        width: 100%;
+        @include padding(20px, 16px, 8px, 20px);
+        h2, mat-icon{
+            font-size: 18px !important;
+        }
+        .tagIcon{
+            margin-right: 8px !important;
+        }
+    }
+}
+
+app-show-members-of-channel{
+    width: 100% !important;
+    border: 1px solid #A4A8FF;
+    border-radius: 20px !important;
+}
+
+:host ::ng-deep app-show-members-of-channel h2 {
+    font-size: 20px;
+}
+
+:host ::ng-deep app-show-members-of-channel .card {
+    @include padding(12px, 20px, 20px, 20px);
+    gap: 0px;
+}
+
+:host ::ng-deep app-show-members-of-channel .closeButton  {
+    display: none;
+}
+
+:host ::ng-deep app-show-members-of-channel input, :host ::ng-deep app-show-members-of-channel form  {
+    width: 100%;
 }
