--- a/src/app/imprint/legal-notice/legal-notice.component.html
+++ b/src/app/imprint/legal-notice/legal-notice.component.html
@@ -27,14 +27,14 @@
     </div>
 
     <div class="info-card">
-        <div class="profil-pic"><img src="./img/profile-pic/arndt-profil.webp"></div>
+        <div class="profil-pic"><img src="./img/profile-pic/IMG-20240928-WA0001 (1).jpg"></div>
         <div class="profil-content">
         <p><strong>Adrian Enßlin</strong><br> 
         Schweizerhof 2<br> 
         86609 Donauwörth<br> 
         </p><p><!--<strong class="black">  Telefon:</strong> <br>
             49-0176 63626861<br>-->
-        </p><p><strong class="black">E-Mail:</strong> <br> <a href='mailto:info@arndt-marcel.de'>info&#64;arndt-marcel.de</a></p>
+        </p><p><strong class="black">E-Mail:</strong> <br> <a href='mailto:info@arndt-marcel.de'>adrian_ensslin&#64;web.de</a></p>
         </div>
         </div>
     </div>
