--- a/src/app/main-content/message/message-reation/message-reation.component.html
+++ b/src/app/main-content/message/message-reation/message-reation.component.html
@@ -11,18 +11,21 @@
     <button *ngIf="message.reactions.rocket.length" (click)="reactionMessage('rocket')">
         <img src="/img/reactions/rocket.svg" alt="">
         <p  class="reaction-number-text">{{message.reactions.rocket.length}}</p>
+
         <div class="show-members">
           <img src="/img/reactions/rocket.svg" alt="">
           <p class="reaction-names">{{checkReactionName(message.reactions.rocket)}}</p>
           <p class="reaction-text">has responded</p>
         </div>
+
     </button>
 
-    <ng-container *ngFor="let reaction of check()">
+    <ng-container *ngFor="let reaction of cachedReactions">
       <div *ngIf="reaction.count > 0">
         <button (click)="reactionMessage(reaction.name)">
           <span>{{ reaction.name }}</span>
           <p class="reaction-number-text">{{ reaction.count }}</p>
+    
           <div class="show-members">
             <span>{{ reaction.name }}</span>
             <p class="reaction-names">{{ checkReactionNameEm(message.reactions, reaction.name) }}</p>
@@ -31,4 +34,6 @@
         </button>
       </div>
     </ng-container>
+
+
 </div>
